@@ -256,8 +256,10 @@ _GLIBCXX_END_NAMESPACE_VERSION
 	// constexpr copy constructor will be ill-formed.
 	duration(const duration&) = default;
 
+	// _GLIBCXX_RESOLVE_LIB_DEFECTS
+	// 3050. Conversion specification problem in chrono::duration
 	template<typename _Rep2, typename = typename
-	       enable_if<is_convertible<_Rep2, rep>::value
+	       enable_if<is_convertible<const _Rep2&, rep>::value
 			 && (treat_as_floating_point<rep>::value
 			     || !treat_as_floating_point<_Rep2>::value)>::type>
 	  constexpr explicit duration(const _Rep2& __rep)
@@ -399,8 +401,12 @@ _GLIBCXX_END_NAMESPACE_VERSION
 	return __cd(__cd(__lhs).count() - __cd(__rhs).count());
       }
 
+    // SFINAE helper to obtain common_type<_Rep1, _Rep2> only if _Rep2
+    // is implicitly convertible to it.
+    // _GLIBCXX_RESOLVE_LIB_DEFECTS
+    // 3050. Conversion specification problem in chrono::duration constructor
     template<typename _Rep1, typename _Rep2, bool =
-	     is_convertible<_Rep2,
+	     is_convertible<const _Rep2&,
 			    typename common_type<_Rep1, _Rep2>::type>::value>
       struct __common_rep_type { };
 
